--- a/css/style.css
+++ b/css/style.css
@@ -1066,6 +1066,7 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
+  font-family: inherit;
 
   background-color: var(--back-grey);
   border-radius: 3px;
@@ -1380,8 +1381,9 @@ input[type="radio"].visually-hidden {
   background-color: var(--back-grey-hover)
 }
 
-.patterns__pagination-item a:active {
+.patterns__pagination-item a[href]:active {
   background-color: var(--back-grey-active);
+  box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
 }
 
 /* Modal Callback */
@@ -1499,6 +1501,7 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
+  font-family: inherit;
   color: var(--white);
 
   background-color: var(--coral-red);
