--- a/css/style.css
+++ b/css/style.css
@@ -1397,9 +1397,11 @@ input[type="radio"].visually-hidden {
   display: none;
   z-index: 2;
   position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: calc(50% - 480px);
+  top: calc(50% - 295px);
+  /* left: 50%;
+  top: 50%; */
+  /* transform: translate(-50%, -50%); */
 
   /* display: flex; */
   flex-wrap: wrap;
@@ -1412,10 +1414,15 @@ input[type="radio"].visually-hidden {
 
   background-color: var(--white);
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
+  animation: bounce 0.6s;
 }
 
 .modal-callback--opened {
   display: flex;
+}
+
+.modal-callback--error {
+  animation: shake 0.6s;
 }
 
 .modal-callback__title {
@@ -1547,4 +1554,46 @@ input[type="radio"].visually-hidden {
 
 .modal-callback__btn-close:active {
   opacity: 0.1;
+}
+
+/* Animation */
+
+@keyframes bounce {
+  0% {
+    transform: translateX(2000px);
+  }
+
+  70% {
+    transform: translateX(-30px);
+  }
+
+  90% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
