Убрал лишние начертания из адреса google fonts, удалил папку fonts, убрал инлайновые стили для ценового фильтра

--- a/css/style.css
+++ b/css/style.css
@@ -902,7 +902,7 @@ input[type="radio"].visually-hidden {
 }
 
 .range__toggle--min {
-  left: 0%; /* Отступ слева + значение */
+  left: 0%;
   transform: translateX(16px);
 }
 
